Traduccion de textos

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ npm-debug.log
 yarn-error.log
 package.json
 package-lock.json
+vendor/mercadopago/dx-php/.phpdoc/cache/descriptors/Y/E/xcu4EjX0DmDT7hywD7iA
