--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ yarn-error.log
 package.json
 package-lock.json
 vendor/mercadopago/dx-php/.phpdoc/cache/descriptors/Y/E/xcu4EjX0DmDT7hywD7iA
+public/images/admin
