--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ package.json
 package-lock.json
 vendor/mercadopago/dx-php/.phpdoc/cache/descriptors/Y/E/xcu4EjX0DmDT7hywD7iA
 public/images/admin
+vendor/composer/platform_check.php
