--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ package-lock.json
 vendor/mercadopago/dx-php/.phpdoc/cache/descriptors/Y/E/xcu4EjX0DmDT7hywD7iA
 public/images/admin
 vendor/composer/platform_check.php
+vendor/composer/platform_check.php
