--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ package.json
 package-lock.json
 vendor/mercadopago/dx-php/.phpdoc/cache/descriptors/Y/E/xcu4EjX0DmDT7hywD7iA
 public/images/admin
+public/videos/admin
 vendor/composer/platform_check.php
 vendor/composer/platform_check.php
